--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "webpack-boilerplate",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:hardwit/webpack-boilerplate.git",
-  "author": "Hardwit",
+  "repository": "git@github.com:assets1975/webpack-boilerplate.git",
+  "author": "Asset Saparov",
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --progress --open --mode development --config webpack.config.js",
@@ -25,6 +25,7 @@
     "eslint-config-google": "^0.9.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "gulp-scss-lint": "^0.6.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
     "install": "^0.10.4",
@@ -32,6 +33,7 @@
     "npm": "^5.7.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "stylelint": "^9.2.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
